color still not roght, sound

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
     "python.analysis.extraPaths": [
         "/Users/axelmansson/.vscode/extensions/joedevivo.vscode-circuitpython-0.1.19-darwin-x64/boards/0x239A/0x8054",
         "/Users/axelmansson/.vscode/extensions/joedevivo.vscode-circuitpython-0.1.19-darwin-x64/stubs",
-        "/Users/axelmansson/Library/Application Support/Code/User/globalStorage/joedevivo.vscode-circuitpython/bundle/20221231/adafruit-circuitpython-bundle-py-20221231/lib"
+        "/Users/axelmansson/Library/Application Support/Code/User/globalStorage/joedevivo.vscode-circuitpython/bundle/20221231/adafruit-circuitpython-bundle-py-20221231/lib",
+        "./lib"
     ],
     "circuitpython.board.version": "8.0.0-beta.6",
     "circuitpython.board.vid": "0x239A",
