--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,16 +2,14 @@
     "python.languageServer": "Pylance",
     "python.linting.pylintEnabled": false,
     "python.analysis.diagnosticSeverityOverrides": {
-        "reportMissingModuleSource": "none",
-        "reportShadowedImports": "none",
-        "reportMissingImports" : false
+        "reportMissingModuleSource": "none"
     },
 
 
     "python.analysis.extraPaths": [
         "/Users/axelmansson/.vscode/extensions/joedevivo.vscode-circuitpython-0.1.19-darwin-x64/boards/0x239A/0x8054",
         "/Users/axelmansson/.vscode/extensions/joedevivo.vscode-circuitpython-0.1.19-darwin-x64/stubs",
-        "/Users/axelmansson/Library/Application Support/Code/User/globalStorage/joedevivo.vscode-circuitpython/bundle/20221231/adafruit-circuitpython-bundle-py-20221231/lib",
+        "/Users/axelmansson/Library/Application Support/Code/User/globalStorage/joedevivo.vscode-circuitpython/bundle/20230114/adafruit-circuitpython-bundle-py-20230114/lib",
         "./lib"
     ],
     "circuitpython.board.version": "8.0.0-beta.6",
