--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,8 @@
     "python.languageServer": "Pylance",
     "python.linting.pylintEnabled": false,
     "python.analysis.diagnosticSeverityOverrides": {
-        "reportMissingModuleSource": false,
-        "reportShadowedImports": "none"
-        
+        "reportMissingModuleSource": "none",
+        "reportShadowedImports": "none"       
     },
 
 
